{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 207,
  "lineage": "04101d1d-9623-9462-ff08-cb3f11feddf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tutorial_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a320ea39ede8325",
            "association_id": "eipassoc-0bf575ee68f74d6b5",
            "domain": "vpc",
            "id": "eipalloc-04a320ea39ede8325",
            "instance": "i-023ca779fdbc5047c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0585e1861b5a4df1f",
            "private_dns": "ip-10-0-1-31.ec2.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-54-88-160-167.compute-1.amazonaws.com",
            "public_ip": "54.88.160.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tutorial_web",
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tutorial_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027a754129abb5386",
            "arn": "arn:aws:ec2:us-east-1:090967155814:instance/i-023ca779fdbc5047c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023ca779fdbc5047c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0585e1861b5a4df1f",
            "private_dns": "ip-10-0-1-31.ec2.internal",
            "private_ip": "10.0.1.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a139cfa205f6f67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f024f409e2086473",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f3f3494f8a271a5"
            ]
          },
          "dependencies": [
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tutorial_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:internet-gateway/igw-0e0efcb7d13c8179b",
            "id": "igw-0e0efcb7d13c8179b",
            "owner_id": "090967155814",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:route-table/rtb-048db31db61cd1afd",
            "id": "rtb-048db31db61cd1afd",
            "owner_id": "090967155814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0efcb7d13c8179b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:route-table/rtb-0ae025dab16098b23",
            "id": "rtb-0ae025dab16098b23",
            "owner_id": "090967155814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0efcb7d13c8179b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045f5cecf8b22b0c1",
            "route_table_id": "rtb-048db31db61cd1afd",
            "subnet_id": "subnet-00cf8eee848559bc4"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_private_ip",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d565e6b932264c8",
            "route_table_id": "rtb-048db31db61cd1afd",
            "subnet_id": "subnet-07b0943c43cdc7920"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_private_ip",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cf28fa137aea060",
            "route_table_id": "rtb-0ae025dab16098b23",
            "subnet_id": "subnet-0f024f409e2086473"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_public_rt",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:security-group/sg-0f9f535fb3cbd9b36",
            "description": "SG for the rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9f535fb3cbd9b36",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.48.40.241/32"
                ],
                "description": "allow postgres traffic only from my ip",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "allow postgres traffic only from the web sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f3f3494f8a271a5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tutorial_db_sg",
            "name_prefix": "",
            "owner_id": "090967155814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tutorial_web_sg",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:security-group/sg-09f3f3494f8a271a5",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f3f3494f8a271a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic thru http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "45.48.40.241/32"
                ],
                "description": "allow ssh from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tutorial_web_sg",
            "name_prefix": "",
            "owner_id": "090967155814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:subnet/subnet-00cf8eee848559bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cf8eee848559bc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090967155814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:subnet/subnet-07b0943c43cdc7920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b0943c43cdc7920",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090967155814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:subnet/subnet-0f024f409e2086473",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f024f409e2086473",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090967155814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            },
            "vpc_id": "vpc-0b49481da4242c57d"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tutorial_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090967155814:vpc/vpc-0b49481da4242c57d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067d4e06a5fedd482",
            "default_route_table_id": "rtb-0c845f92d281897fc",
            "default_security_group_id": "sg-0e075967df58a10f1",
            "dhcp_options_id": "dopt-f37ee089",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b49481da4242c57d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c845f92d281897fc",
            "owner_id": "090967155814",
            "tags": {
              "Name": "tutorial"
            },
            "tags_all": {
              "Name": "tutorial"
            }
          }
        }
      ]
    }
  ]
}